# PhotoSense-AI

./: .gitignore  BUILD_MAC_APP.sh  LICENSE  LICENSE-THIRD-PARTY  NOTICE  PhotoSense-AI.dmg  README.md  app.py  cleanup_person_objects.py  download_places365.py  install_places365.sh  requirements.txt  run_api.py  run_api.sh  run_cleanup.py  temp_build.sh  test_search.py
apps/desktop/: index.html  package.json  tailwind.config.js
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: Header.tsx  MapComponent.tsx  MetadataPanel.tsx  SetupScreen.tsx  Sidebar.tsx
apps/desktop/src/components/common/: Card.tsx  EmptyState.tsx  ThemeProvider.tsx
apps/desktop/src/services/: api.ts  theme.ts
apps/desktop/src/styles/: index.css
apps/desktop/src/utils/: tauri.ts
apps/desktop/src/views/: HelpView.tsx  ObjectsView.tsx  PeopleView.tsx  PhotosView.tsx  PlacesView.tsx  SearchView.tsx  SettingsView.tsx
docs/: PERFORMANCE_OPTIMIZATIONS.md
packaging/: README.md  build-macos.sh  build-windows.bat  build-windows.ps1
packaging/backend/: build-macos.sh  build-windows.bat  build-windows.ps1  photosense_backend.py  photosense_backend.spec
packaging/desktop-wrapper/: backend.spec  backend_entry.py  build_backend.ps1  build_backend.sh  build_desktop.ps1  build_desktop.sh
packaging/desktop-wrapper/src-tauri/: Cargo.toml  tauri.conf.json
packaging/desktop-wrapper/src-tauri/src/: main.rs
packaging/frontend/: Cargo.toml  build-macos.sh  build-windows.bat  build-windows.ps1  tauri.conf.json
packaging/frontend/src/: main.rs
packaging/macos/: README.md  backend-entry.py  backend.spec  build.sh  tauri.conf.json
packaging/windows/: backend-entry.py  backend.spec  build-backend.bat  build-backend.ps1  build-frontend.bat  build-frontend.ps1  install.bat  install.ps1  tauri.conf.json
scripts/: download_models.py
services/: config.py  logging_config.py
services/api/: __init__.py  main.py  models.py
services/api/routes/: faces.py  models.py  objects.py  people.py  pets.py  photos.py  places.py  scan.py  scenes.py  search.py  stats.py  tags.py
services/ml/: __init__.py  cleanup_duplicates.py  pipeline.py  utils.py
services/ml/detectors/: __init__.py  clip_scene_detector.py  face_detector.py  florence_detector.py  object_detector.py  scene_detector.py
services/ml/embeddings/: face_embedding.py  image_embedding.py
services/ml/storage/: __init__.py  faiss_index.py  sqlite_store.py
services/ml/utils/: __init__.py  exif_utils.py  face_align_patch.py  geocoder.py  image_cache.py  model_tracker.py  path_utils.py  search_utils.py
src/: __init__.py  main.py
src/db/: __init__.py  database.py
src/face/: __init__.py  cluster.py  detect.py  encode.py
src/scanner/: __init__.py  metadata.py  scan_images.py
src/search/: __init__.py  search.py
