[package]
name = "photosense-ai"
version = "1.0.0"
description = "AI-powered local photo organizer"
authors = ["PhotoSense-AI"]
license = "AGPL-3.0"
repository = "https://github.com/abhishekanand16/PhotoSense-AI"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
    "shell-sidecar",
    "shell-open",
    "dialog-open",
    "dialog-message",
    "dialog-ask",
    "fs-read-file",
    "fs-read-dir",
    "path-all",
    "protocol-asset",
    "process-exit",
    "process-relaunch",
    "window-close",
    "window-hide",
    "window-show",
    "window-maximize",
    "window-minimize",
    "window-unmaximize",
    "window-unminimize",
    "window-start-dragging",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
