[package]
name = "photosense-ai-desktop"
version = "1.0.0"
description = "PhotoSense-AI Desktop Application"
authors = ["PhotoSense-AI"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "process-all",
    "shell-sidecar",
    "shell-open",
    "process-command-api",
    "protocol-asset",
    "fs-all",
    "path-all",
    "dialog-all"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
